Updated with latest openapi schema
