# Sources/WinWinKit/Generated/OpenAPI/Internal/UserClaimCodeDataResponse.swift
@@ -1,32 +1,0 @@
-//
-// UserClaimCodeDataResponse.swift
-//
-// Generated by openapi-generator
-// https://openapi-generator.tech
-//
-
-import Foundation
-#if canImport(AnyCodable)
-import AnyCodable
-#endif
-
-internal struct UserClaimCodeDataResponse: Codable, Hashable {
-
-    public private(set) var data: UserClaimCodeResponse
-
-    public init(data: UserClaimCodeResponse) {
-        self.data = data
-    }
-
-    public enum CodingKeys: String, CodingKey, CaseIterable {
-        case data
-    }
-
-    // Encodable protocol methods
-
-    internal func encode(to encoder: Encoder) throws {
-        var container = encoder.container(keyedBy: CodingKeys.self)
-        try container.encode(data, forKey: .data)
-    }
-}
-
