# Sources/WinWinKit/Generated/OpenAPI/Internal/UserDataResponse.swift
@@ -1,32 +1,0 @@
-//
-// UserDataResponse.swift
-//
-// Generated by openapi-generator
-// https://openapi-generator.tech
-//
-
-import Foundation
-#if canImport(AnyCodable)
-import AnyCodable
-#endif
-
-internal struct UserDataResponse: Codable, Hashable {
-
-    public private(set) var data: UserResponse
-
-    public init(data: UserResponse) {
-        self.data = data
-    }
-
-    public enum CodingKeys: String, CodingKey, CaseIterable {
-        case data
-    }
-
-    // Encodable protocol methods
-
-    internal func encode(to encoder: Encoder) throws {
-        var container = encoder.container(keyedBy: CodingKeys.self)
-        try container.encode(data, forKey: .data)
-    }
-}
-
